[package]
name = "tester"
version = "0.1.0"
edition = "2021"

[profile.dev]
lto = true
opt-level = 2
debug = 2
codegen-units = 1

[profile.release]
opt-level = "s"
lto = true
debug = 2

[dependencies]
mos-hardware = "0"
ufmt-stdio = "0"
memoffset = {version = "0.7.1", features = ["unstable_const"]}
static_assertions = "1.1.0"
bitflags = "1.3.2"
volatile-register = "0.2.1"
itertools = {version = "0.10.3", default-features = false}

[build-dependencies]
cc = "1"
bindgen = "0.61"

[dev-dependencies]
ufmt-stdio = "0"

[patch.crates-io]
ufmt = {git="https://github.com/mrk-its/ufmt", branch="ptr_width_16_fix"}
ufmt-write = {git="https://github.com/mrk-its/ufmt", branch="ptr_width_16_fix"}

[features]
docs-rs = []